[gd_scene load_steps=15 format=2]

[ext_resource path="res://Skrzynia.gd" type="Script" id=1]
[ext_resource path="res://Hud/ChestHUD.png" type="Texture" id=2]
[ext_resource path="res://Hud/ChestEmptyTile64x64.png" type="Texture" id=3]
[ext_resource path="res://Slot1.gd" type="Script" id=4]
[ext_resource path="res://Hud/ExitArrowChestCraft.png" type="Texture" id=5]
[ext_resource path="res://Styles/GuzikKuchenka.tres" type="StyleBox" id=6]
[ext_resource path="res://Styles/GuzikKuchenka_Wcisniety.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/TloKuchenka.tres" type="StyleBox" id=8]
[ext_resource path="res://Hud/AvatarHUD.png" type="Texture" id=9]
[ext_resource path="res://Hud/HP_frame.png" type="Texture" id=10]
[ext_resource path="res://Hud/HP_progres.png" type="Texture" id=11]
[ext_resource path="res://Hud/Food_progres.png" type="Texture" id=12]
[ext_resource path="res://Hud/HP_down.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Skrzynia" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 0.0986482
margin_top = -0.0318109
margin_right = 1280.11
margin_bottom = 719.968
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="TextureRect"]
margin_left = 1149.63
margin_top = 87.0138
margin_right = 1213.63
margin_bottom = 119.014
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gracz" type="Sprite" parent="TextureRect"]
position = Vector2( 150.104, 50.2511 )
z_index = 2
texture = ExtResource( 9 )

[node name="Hp" type="TextureProgress" parent="TextureRect/Gracz"]
margin_left = -49.0
margin_top = -47.0
margin_right = 147.0
margin_bottom = -29.0
value = 100.0
texture_under = ExtResource( 13 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numer_hp" type="Label" parent="TextureRect/Gracz/Hp"]
margin_right = 196.0
margin_bottom = 18.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" type="TextureProgress" parent="TextureRect/Gracz"]
margin_left = -49.0
margin_top = -26.0
margin_right = 105.0
margin_bottom = -13.0
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numer_food" type="Label" parent="TextureRect/Gracz/Food"]
margin_right = 154.0
margin_bottom = 14.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 128.0
margin_top = 130.0
margin_right = 1194.0
margin_bottom = 614.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 13
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot2" type="Panel" parent="GridContainer"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot3" type="Panel" parent="GridContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot4" type="Panel" parent="GridContainer"]
margin_left = 240.0
margin_right = 304.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot5" type="Panel" parent="GridContainer"]
margin_left = 320.0
margin_right = 384.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot6" type="Panel" parent="GridContainer"]
margin_left = 400.0
margin_right = 464.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot7" type="Panel" parent="GridContainer"]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot8" type="Panel" parent="GridContainer"]
margin_left = 560.0
margin_right = 624.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot9" type="Panel" parent="GridContainer"]
margin_left = 640.0
margin_right = 704.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot10" type="Panel" parent="GridContainer"]
margin_left = 720.0
margin_right = 784.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot11" type="Panel" parent="GridContainer"]
margin_left = 800.0
margin_right = 864.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot12" type="Panel" parent="GridContainer"]
margin_left = 880.0
margin_right = 944.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot13" type="Panel" parent="GridContainer"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot14" type="Panel" parent="GridContainer"]
margin_top = 80.0
margin_right = 64.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot15" type="Panel" parent="GridContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot16" type="Panel" parent="GridContainer"]
margin_left = 160.0
margin_top = 80.0
margin_right = 224.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot17" type="Panel" parent="GridContainer"]
margin_left = 240.0
margin_top = 80.0
margin_right = 304.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot18" type="Panel" parent="GridContainer"]
margin_left = 320.0
margin_top = 80.0
margin_right = 384.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot19" type="Panel" parent="GridContainer"]
margin_left = 400.0
margin_top = 80.0
margin_right = 464.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot20" type="Panel" parent="GridContainer"]
margin_left = 480.0
margin_top = 80.0
margin_right = 544.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot21" type="Panel" parent="GridContainer"]
margin_left = 560.0
margin_top = 80.0
margin_right = 624.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot22" type="Panel" parent="GridContainer"]
margin_left = 640.0
margin_top = 80.0
margin_right = 704.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot23" type="Panel" parent="GridContainer"]
margin_left = 720.0
margin_top = 80.0
margin_right = 784.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot24" type="Panel" parent="GridContainer"]
margin_left = 800.0
margin_top = 80.0
margin_right = 864.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot25" type="Panel" parent="GridContainer"]
margin_left = 880.0
margin_top = 80.0
margin_right = 944.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot26" type="Panel" parent="GridContainer"]
margin_left = 960.0
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 144.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot28" type="Panel" parent="GridContainer"]
margin_top = 160.0
margin_right = 64.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot27" type="Panel" parent="GridContainer"]
margin_left = 80.0
margin_top = 160.0
margin_right = 144.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot29" type="Panel" parent="GridContainer"]
margin_left = 160.0
margin_top = 160.0
margin_right = 224.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot30" type="Panel" parent="GridContainer"]
margin_left = 240.0
margin_top = 160.0
margin_right = 304.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot31" type="Panel" parent="GridContainer"]
margin_left = 320.0
margin_top = 160.0
margin_right = 384.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot32" type="Panel" parent="GridContainer"]
margin_left = 400.0
margin_top = 160.0
margin_right = 464.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot33" type="Panel" parent="GridContainer"]
margin_left = 480.0
margin_top = 160.0
margin_right = 544.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot34" type="Panel" parent="GridContainer"]
margin_left = 560.0
margin_top = 160.0
margin_right = 624.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot35" type="Panel" parent="GridContainer"]
margin_left = 640.0
margin_top = 160.0
margin_right = 704.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot36" type="Panel" parent="GridContainer"]
margin_left = 720.0
margin_top = 160.0
margin_right = 784.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot37" type="Panel" parent="GridContainer"]
margin_left = 800.0
margin_top = 160.0
margin_right = 864.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot38" type="Panel" parent="GridContainer"]
margin_left = 880.0
margin_top = 160.0
margin_right = 944.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot39" type="Panel" parent="GridContainer"]
margin_left = 960.0
margin_top = 160.0
margin_right = 1024.0
margin_bottom = 224.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot40" type="Panel" parent="GridContainer"]
margin_top = 240.0
margin_right = 64.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot41" type="Panel" parent="GridContainer"]
margin_left = 80.0
margin_top = 240.0
margin_right = 144.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot42" type="Panel" parent="GridContainer"]
margin_left = 160.0
margin_top = 240.0
margin_right = 224.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot43" type="Panel" parent="GridContainer"]
margin_left = 240.0
margin_top = 240.0
margin_right = 304.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot44" type="Panel" parent="GridContainer"]
margin_left = 320.0
margin_top = 240.0
margin_right = 384.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot45" type="Panel" parent="GridContainer"]
margin_left = 400.0
margin_top = 240.0
margin_right = 464.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot46" type="Panel" parent="GridContainer"]
margin_left = 480.0
margin_top = 240.0
margin_right = 544.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot47" type="Panel" parent="GridContainer"]
margin_left = 560.0
margin_top = 240.0
margin_right = 624.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot48" type="Panel" parent="GridContainer"]
margin_left = 640.0
margin_top = 240.0
margin_right = 704.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot49" type="Panel" parent="GridContainer"]
margin_left = 720.0
margin_top = 240.0
margin_right = 784.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot50" type="Panel" parent="GridContainer"]
margin_left = 800.0
margin_top = 240.0
margin_right = 864.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot51" type="Panel" parent="GridContainer"]
margin_left = 880.0
margin_top = 240.0
margin_right = 944.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot52" type="Panel" parent="GridContainer"]
margin_left = 960.0
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 304.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot53" type="Panel" parent="GridContainer"]
margin_top = 320.0
margin_right = 64.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot54" type="Panel" parent="GridContainer"]
margin_left = 80.0
margin_top = 320.0
margin_right = 144.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot55" type="Panel" parent="GridContainer"]
margin_left = 160.0
margin_top = 320.0
margin_right = 224.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot56" type="Panel" parent="GridContainer"]
margin_left = 240.0
margin_top = 320.0
margin_right = 304.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot57" type="Panel" parent="GridContainer"]
margin_left = 320.0
margin_top = 320.0
margin_right = 384.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot58" type="Panel" parent="GridContainer"]
margin_left = 400.0
margin_top = 320.0
margin_right = 464.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot59" type="Panel" parent="GridContainer"]
margin_left = 480.0
margin_top = 320.0
margin_right = 544.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot60" type="Panel" parent="GridContainer"]
margin_left = 560.0
margin_top = 320.0
margin_right = 624.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot61" type="Panel" parent="GridContainer"]
margin_left = 640.0
margin_top = 320.0
margin_right = 704.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot62" type="Panel" parent="GridContainer"]
margin_left = 720.0
margin_top = 320.0
margin_right = 784.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot63" type="Panel" parent="GridContainer"]
margin_left = 800.0
margin_top = 320.0
margin_right = 864.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot64" type="Panel" parent="GridContainer"]
margin_left = 880.0
margin_top = 320.0
margin_right = 944.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot65" type="Panel" parent="GridContainer"]
margin_left = 960.0
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 384.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot66" type="Panel" parent="GridContainer"]
margin_top = 400.0
margin_right = 64.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot67" type="Panel" parent="GridContainer"]
margin_left = 80.0
margin_top = 400.0
margin_right = 144.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot68" type="Panel" parent="GridContainer"]
margin_left = 160.0
margin_top = 400.0
margin_right = 224.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot69" type="Panel" parent="GridContainer"]
margin_left = 240.0
margin_top = 400.0
margin_right = 304.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot70" type="Panel" parent="GridContainer"]
margin_left = 320.0
margin_top = 400.0
margin_right = 384.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot71" type="Panel" parent="GridContainer"]
margin_left = 400.0
margin_top = 400.0
margin_right = 464.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot72" type="Panel" parent="GridContainer"]
margin_left = 480.0
margin_top = 400.0
margin_right = 544.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot73" type="Panel" parent="GridContainer"]
margin_left = 560.0
margin_top = 400.0
margin_right = 624.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot74" type="Panel" parent="GridContainer"]
margin_left = 640.0
margin_top = 400.0
margin_right = 704.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot75" type="Panel" parent="GridContainer"]
margin_left = 720.0
margin_top = 400.0
margin_right = 784.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot76" type="Panel" parent="GridContainer"]
margin_left = 800.0
margin_top = 400.0
margin_right = 864.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot77" type="Panel" parent="GridContainer"]
margin_left = 880.0
margin_top = 400.0
margin_right = 944.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Slot78" type="Panel" parent="GridContainer"]
margin_left = 960.0
margin_top = 400.0
margin_right = 1024.0
margin_bottom = 464.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 2

[node name="Warning" type="Panel" parent="Sprite"]
self_modulate = Color( 0.309804, 0.262745, 0.262745, 0.501961 )
margin_left = 1280.0
margin_right = 2560.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -1288, -69 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Panel" parent="Sprite/Warning"]
self_modulate = Color( 0.278431, 0.25098, 0.286275, 1 )
margin_left = 480.0
margin_top = 270.0
margin_right = 800.0
margin_bottom = 440.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zjedz" type="Button" parent="Sprite/Warning/W"]
margin_left = 32.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 90.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Zjedz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Usun" type="Button" parent="Sprite/Warning/W"]
margin_left = 32.0
margin_top = 90.0
margin_right = 160.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Usun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wroc" type="Button" parent="Sprite/Warning/W"]
margin_left = 160.0
margin_top = 90.0
margin_right = 288.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Wroc"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Sprite/Warning/W/Zjedz" to="." method="_on_Zjedz_pressed"]
[connection signal="pressed" from="Sprite/Warning/W/Usun" to="." method="_on_Usun_pressed"]
[connection signal="pressed" from="Sprite/Warning/W/Wroc" to="." method="_on_Wroc_pressed"]
